[package]
name = "singleton-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.0"
common = { path = "../common" }
serde_json = "1.0.59"
serde = { version = "1.0.130", features = ["derive"] }
url = "2.2.2"
maxminddb = "0.23.0"
